# llm-stock-team-analyzer

./: .dockerignore  Dockerfile  Dockerfile.distroless  Makefile  README.md  build.sh  main.py  pyproject.toml  run.sh
.github/workflows/: ci.yaml  copilot-instructions.md
llm_stock_team_analyzer/agents/: __init__.py
llm_stock_team_analyzer/agents/analysts/: market_analyst.py  news_analyst.py
llm_stock_team_analyzer/agents/researchers/: bear_researcher.py  bull_researcher.py
llm_stock_team_analyzer/agents/trader/: trader.py
llm_stock_team_analyzer/agents/utils/: README.md  agent_states.py  agent_utils.py  memory.py
llm_stock_team_analyzer/configs/: config.example.yaml  config.py
llm_stock_team_analyzer/dataflows/: indicators.py  interface.py
llm_stock_team_analyzer/dataflows/googlenews_utils/: __init__.py  exceptions.py  models.py  utils.py
llm_stock_team_analyzer/dataflows/yfinance_utils/: utils.py
llm_stock_team_analyzer/graph/: README.md  conditional_logic.py  propagation.py  reflection.py  setup.py  trading_graph.py
llm_stock_team_analyzer/utils/: __init__.py  logger.py
tests/: README.md  conftest.py  test_indicators.py  test_utils.py
